# serini

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: publish.yml
src/: de.rs  lib.rs  ser.rs
